DEHS-513 Fix missing closing causing layout to break and fix the default styling as it hides the blocks on the side and it is rendered off-center.

--- a/styles.css
+++ b/styles.css
@@ -1363,11 +1363,11 @@ also the blank invisible column that shows up on ColVis hide/Show list*/
 
 .path-report-myfeedback aside#block-region-side-pre,
 .path-report-myfeedback aside#block-region-side-post {
-    display:none;
+    /*display:none;*/
 }
 
 .path-report-myfeedback #region-main {
-    width: 100%;
+    /*width: 100%;*/
 }
 .path-report-myfeedback table.fixedHeader-floating {
   position: fixed !important;
